haddock documentation included publish

--- a/documentation.html
+++ b/documentation.html
@@ -26,6 +26,7 @@
 <p>If you need help, please email me at hhefesto at rdataa dot com, and I might be able to put together a tutorial for you.</p>
 <p>Currently available documentation:</p>
 <ul>
+<li><a href="./docs/haddock/index.html">Haddock Documentation</a></li>
 <li><a href="./docs/sil-specification.pdf">Specification of the Stand-in Language</a></li>
 </ul>
         </div>
