changing to telomare and updating haddocks in master try 2

--- a/documentation.html
+++ b/documentation.html
@@ -3,14 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>SIL Documentation</title>
+        <title>Telomare Documentation</title>
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
         <link rel="stylesheet" type="text/css" href="./css/syntax.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="./">Stand-In-Language</a>
+                <a href="./">Telomare</a>
             </div>
             <div id="navigation">
                 <a href="./quickstart.html">QuickStart</a>
@@ -27,7 +27,7 @@
 <p>Currently available documentation:</p>
 <ul>
 <li><a href="./docs/haddock/index.html">Haddock Documentation</a></li>
-<li><a href="./docs/sil-specification.pdf">Specification of the Stand-in Language</a></li>
+<li><a href="./docs/sil-specification.pdf">Specification of the Telomare language (before called Stand-In-Language)</a></li>
 </ul>
         </div>
         <div id="footer">
