--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <h2>Welcome</h2>
 
-<p>Welcome to the Stand-In-Language (SIL) website!</p>
+<p>Welcome to the Telomare website!</p>
 
-<p>SIL's compiler code is available on <a href="https://github.com/Stand-In-Language/stand-in-language">Github</a>.</p>
+<p>Telomare's compiler code is available on <a href="https://github.com/Stand-In-Language/stand-in-language">Github</a>.</p>
 
-<p>Feel free to visit our gitter chat with SIL's author and the community interested in SIL:</p>
+<p>Feel free to visit our gitter chat with Telomare's author and the community interested in Telomare:</p>
 
 <a href="https://gitter.im/stand-in-language/Lobby?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge" rel="nofollow"><img src="https://camo.githubusercontent.com/7b3061750a7c7a8271c4c0bf4dcd5081028cade9/68747470733a2f2f6261646765732e6769747465722e696d2f7374616e642d696e2d6c616e67756167652f4c6f6262792e737667" alt="Join the chat at https://gitter.im/stand-in-language/Lobby" data-canonical-src="https://badges.gitter.im/stand-in-language/Lobby.svg" style="max-width:100%;"></a>
 
-<p>Explore this list of recent posts to keep up with the latest of SIL:</p>
+<p>Explore this list of recent posts to keep up with the latest of Telomare:</p>
 
 <h2>Posts</h2>
 $partial("templates/post-list.html")$
