post nuke. fingers crossed once again.

--- a/documentation.html
+++ b/documentation.html
@@ -27,7 +27,7 @@
 <p>Currently available documentation:</p>
 <ul>
 <li><a href="./docs/haddock/index.html">Haddock Documentation</a></li>
-<li><a href="./docs/sil-specification.pdf">Specification of the Telomare language (before called Stand-In-Language)</a></li>
+<li><a href="./docs/sil-specification.pdf">Specification of the Stand-in Language</a></li>
 </ul>
         </div>
         <div id="footer">
